before adding picture subs

--- a/index.html
+++ b/index.html
@@ -13,47 +13,35 @@
                     <a rel="home" href="index.html" class="roboto-black" id="red">MI</a>
                     <a rel="home" href="index.html" class="roboto-black" id="green">HEALTH</a>
                     <span class="header-right">
-                        <a>Dessert</a>
-                        <a>Dinner</a>
-                        <a>Lunch</a>
-                        <a>Breakfast</a>
+                        <a href="#">Dessert</a>
+                        <a href="#">Dinner</a>
+                        <a href="#">Lunch</a>
+                        <a href="#">Breakfast</a>
                     </span>
                 </div>
             </header>
-        
-            <div class="main">
-                <div class="left"><!--heading, paragraph, 'browse menu'-->
+            <div class="main"><!--heading, paragraph, 'browse menu'-->
+                <div>
                     <h1 class="roboto-black">Be<br>Healthy</h1>
-                    <p class="paragraph">Lorem ipsum dolor sit amet,
+                    <p>
+                        Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                        gravida. Risus commodo viverra maecenas accumsan lacus vel
-                        facilisis.</p>
+                        gravida. Risus commodo viverra maecenas accumsan lacus vel                        
+                        facilisis.
+                    </p>
                     <a class="arrow">BROWSE MENU --></a>
                 </div>
-
-
-
-
-                <div class="right"><!--three pictures-->
-                    <span class="pic">
-                        <div>
-                            <img src="apple-breakfast-quinoa-7.jpg" alt="Apple breakfast quinoa">
-                            <span>Fresh</span>
-                            <span>Breakfast</span>
-                        </div>
-                        <div>
-                            <img src="pasta-salad-recipe-for-lunch.jpg" alt="Pasta salad">
-                            <span>Sweet</span>
-                            <span>Lunch</span>
-                        </div>
-                        <div>
-                            <img src="Screenshot_208.jpg" alt="Shrimp and rice">
-                            <span>Delicious</span>
-                            <span>Dinner</span>
-                    </span>
-                </div>
+                <div class="pic">
+                    <img src="apple-breakfast-quinoa-7.jpg" alt="Apple breakfast quinoa">
+                    <img src="pasta-salad-recipe-for-lunch.jpg" alt="Pasta salad">
+                    <img id="shrimp" src="Screenshot_208.jpg" alt="Shrimp and rice">
+                </div>      
             </div>
         </div>
+            <footer>
+                <p>Author: Malia Jacob</p>
+                <p><a href="mailto:hege@example.com">malia@example.com</a></p>
+            </footer>
     </body>
 </html>
