white and green labels added

--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
                     </p>
                     <a class="arrow">BROWSE MENU --></a>
                 </div>
-                <div class="pic">
-                    <img src="apple-breakfast-quinoa-7.jpg" alt="Apple breakfast quinoa">
-                    <img src="pasta-salad-recipe-for-lunch.jpg" alt="Pasta salad">
+                <div class="image-container">
+                    <img id="apple" src="apple-breakfast-quinoa-7.jpg" alt="Apple breakfast quinoa">
+                    <div class="whitebox">Fresh</div>
+                    <div class="greenbox"></div><div class="text-overlay">Breakfast</div>
+
+                    <img id="pasta" src="pasta-salad-recipe-for-lunch.jpg" alt="Pasta salad">
+                    <div class="whitebox" id="sweet">Sweet</div>
+                    <div class="lunch-greenbox"></div><div class="text-overlay" id="lunch">Lunch</div>
+
                     <img id="shrimp" src="Screenshot_208.jpg" alt="Shrimp and rice">
+                    <div class="whitebox" id="delicious">Delicious</div>
+                    <div class="dinner-greenbox"></div><div class="text-overlay" id="dinner">Dinner</div>
+
+
                 </div>      
             </div>
         </div>
