--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
         
     </head>
     <body>
-        <header>
-            <div class="navbar">
-                <a rel="home" href="index.html" class="archivo-black-regular" id="red">MI</a>
-                <a rel="home" href="index.html" class="archivo-black-regular" id="green">HEALTH</a>
-                <span class="header-right">
-                    <a href="#">Dessert</a>
-                    <a href="#">Dinner</a>
-                    <a href="#">Lunch</a>
-                    <a href="#">Breakfast</a>
-                </span>
-            </div>
+        <header class="navbar">
+            <a rel="home" href="index.html" class="archivo-black-regular" id="red">MI</a>
+            <a rel="home" href="index.html" class="archivo-black-regular" id="green">HEALTH</a>
+            <span class="header-right">
+                <a href="#">Dessert</a>
+                <a href="#">Dinner</a>
+                <a href="#">Lunch</a>
+                <a href="#">Breakfast</a>
+            </span>
         </header>
 
 
@@ -37,11 +35,11 @@
                 </div>
 
                 <div class="image-container">
-                    <img id="apple" src="apple-breakfast-quinoa-7.jpg" alt="Apple breakfast quinoa">
+                    <img src="apple-breakfast-quinoa-7.jpg" alt="Apple breakfast quinoa">
                     <div class="whitebox">FRESH</div>
                     <div class="greenbox"></div><div class="text-overlay">BREAKFAST</div>
 
-                    <img id="pasta" src="pasta-salad-recipe-for-lunch.jpg" alt="Pasta salad">
+                    <img src="pasta-salad-recipe-for-lunch.jpg" alt="Pasta salad">
                     <div class="whitebox" id="sweet">SWEET</div>
                     <div class="lunch-greenbox"></div><div class="text-overlay" id="lunch">LUNCH</div>
 
@@ -54,8 +52,7 @@
 
 
             <footer class="footer">
-                <p>Author: Malia Jacob</p>
-                <a href="#">malia@example.com</a>
+                <p>Author: Malia Jacob<br>Email: malia@example.com</p>
             </footer>
     </body>
 </html>
