--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         gravida. Risus commodo viverra maecenas accumsan lacus vel                        
                         facilisis.
                     </p>
-                    <br><a href="#" class="arrow">BROWSE MENU →</a>
+                    <br><h3><a href="#" class="arrow">BROWSE MENU →</a></h3>
                 </div>
 
                 <div class="image-container">
@@ -51,8 +51,8 @@
         </div>
 
 
-            <footer class="footer">
-                <p>Author: Malia Jacob<br>Email: malia@example.com</p>
-            </footer>
+        <footer class="footer">
+            <p>Author: Malia Jacob<br>Email: malia@example.com</p>
+        </footer>
     </body>
 </html>
